trying to fix sidebar overflow in .sidebar class

--- a/docs/_sass/_ed.scss
+++ b/docs/_sass/_ed.scss
@@ -292,6 +292,7 @@ tbody tr:nth-child(odd) th {
   font-size: .875rem;/* 15px*/
   color: rgba(255,255,255,.6);
   background-color: #202020;
+  overflow-wrap: break-word;
   -webkit-transition: all .3s ease-in-out;
           transition: all .3s ease-in-out;
 }
